# manager_selection_py

./: README.md  pyproject.toml
books/Asset Allocation Strategies for Mutual Funds by Giuseppe Galloppo/Conditional Factor Model/: README.md  implementation.py
books/Asset Allocation Strategies for Mutual Funds by Giuseppe Galloppo/market_timing/: README.md  implementation.py
papers/can_mutual_fund_stars_really_pick_stocs/: README.md  implementation.py
papers/quality_control_chart/: README.md  implementation.py
papers/variance‐based implied return portfolio optimisation/: README.md  implementation.py
